package Concreteclasses;

import interfaces.Robot;

import java.util.List;

public class AutomatedRobot implements Robot {
    Location currentLocation;
    List<Item> carriedItems;

    @Override
    public void moveTo(Location location) {

    }

    @Override
    public void pickItem(Item item) {

    }

    @Override
    public void dropItem(Item item, Location location) {

    }
}
