package Concreteclasses;

public class Location {
    String location;

    public String getLocation() {
        return location;
    }

    public Location(String location) {
        this.location = location;
    }
}
